FAQ Popup button fix, White Space tweek

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -239,7 +239,7 @@ $activeGreen: #389D48;
             font-weight: 600;
             font-size: 24px;
             color: $primaryGrey;
-            margin: 40px 0 20px 0;
+            margin: 60px 0 30px 0;
 
             img {
                 margin-left: 10px;
@@ -592,7 +592,7 @@ $activeGreen: #389D48;
         .buttons {
             display: flex;
             align-items: center;
-            column-gap: 20px;
+            column-gap: 10px;
             margin-top: 60px;
 
             button {
